[tool.poetry]
name = "network-science-project"
version = "0.1.0"
description = ""
authors = ["Daria <darianow112@gmail.com>"]
readme = "README.md"
packages = [{include = "network_science_project"}]

[tool.poetry.dependencies]
python = "^3.10"
networkx = "^2.8.8"
numpy = "^1.23.4"
pandas = "^1.5.1"
tweepy = "^4.12.0"
matplotlib = "^3.6.2"
praw = "^7.6.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.17.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
